src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>ApprovalLevel1__c</fullName>
        <description>Field to catch the monetary value of the first level approval needed for the SKU</description>
        <label>Approval Level 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovalLevel2__c</fullName>
        <description>Field to catch the monetary value of the second level approval needed for the SKU</description>
        <label>Approval Level 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovalLevel3__c</fullName>
        <description>Field to catch the monetary value of the third level approval needed for the SKU</description>
        <label>Approval Level 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor_price__c</fullName>
        <label>Distributor price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dummy_Field__c</fullName>
        <label>Dummy Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreeProductThreshold__c</fullName>
        <label>Free Product Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalProductDescription__c</fullName>
        <description>TFUS-000001282</description>
        <label>Local Product Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <description>To be filled with the retail price if the Pricebook has wholesale prices</description>
        <label>Retail Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wholesale_Price__c</fullName>
        <label>Wholesale Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Check_market</fullName>
        <active>true</active>
        <description>#3279</description>
        <errorConditionFormula>AND(
TEXT(Pricebook2.Market__c)&lt;&gt; TEXT( $User.Market__c ), TEXT(Pricebook2.Market__c)&lt;&gt; TEXT( $User.User_Country__c ),
$User.Profile__c &lt;&gt; &quot;#System: System Administrator&quot;, 
$User.Id &lt;&gt; &quot;00520000001CBYl&quot;,
$User.Profile__c &lt;&gt; &quot;#System: OrgFlow&quot;,
Product2.RecordType.Id &lt;&gt; &apos;0126M000000R5KX&apos;
)</errorConditionFormula>
        <errorMessage>You cannot edit price book entries that are not connected to your market</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NotAllowedToAddInPricebook</fullName>
        <active>true</active>
        <errorConditionFormula>$UserRole.Id  &lt;&gt;  &quot;00E20000000qSiH&quot; &amp;&amp; Pricebook2.ShowPricingfromMicroServiceOM__c
&amp;&amp;
(Pricebook2.CompanyCode__c != Product2.Company_Code__c
||
text(Pricebook2.SourceId__c) != text(Product2.ERP_Source__c))</errorConditionFormula>
        <errorMessage>This Product is not matching Pricebook Company Code or Source</errorMessage>
    </validationRules>
</CustomObject>